Fixed cover layout bug and completed styling for cover section at >=768 <1024

--- a/styles/main.css
+++ b/styles/main.css
@@ -117,9 +117,10 @@ main {
 /**** Cover Article SEction ****/
 
 #cover {
-    height: 100vh;
+    height: 60vh;
     width: 100%;
 }
+
 #main-cover-article {
     background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/01/nembear-796x448.jpg");
 }
@@ -138,7 +139,7 @@ main {
     height: 33.33%;
     min-height: 110px;
     align-items: flex-end;
-    margin: 0.3em 0;
+    margin-right: 1%;
 }
 
 .cover-article-details {
@@ -187,7 +188,7 @@ main {
 
 .cover-byline a:hover {
     color: #fff;
-}
+} */
 
 /**** Latest News ****/
 .news-article {
@@ -765,16 +766,20 @@ footer {
     /* cover*/
     #cover {
         flex-direction: row;
-        flex-wrap: wrap;
+        flex-flow: column wrap;
     }
     #main-cover-article {
-        width: 60%;
+        width: 59%;
         height: 100%;
     }
     #cover-top-right,
     #cover-bot-right {
-        height: 50%;
+        height: 49%;
         width: 40%;
+    }
+
+    #cover-top-right {
+        margin-bottom: 1%;
     }
     /* end cover */
 
